--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,35 @@
-version: '3'
-services: 
+version: "3"
+services:
     backend:
         build: ./backend/
-        ports: 
-            - "8080:8080"
-        volumes: 
-            - './backend:/usr/src/app'
-        working_dir: '/usr/src/app'
-        container_name: 'backend'
-        env_file: 
+        ports:
+            - "8000:8000"
+        volumes:
+            - "./backend:/usr/src/app"
+        working_dir: "/usr/src/app"
+        container_name: "backend"
+        env_file:
             - ./env/back.env
             - ./env/db.env
-        depends_on: 
+        depends_on:
             - db
         command: sleep infinity
     frontend:
         build: ./frontend/
-        volumes: 
-            - './frontend:/usr/src/app'
-        working_dir: '/usr/src/app'
-        container_name: 'frontend'
+        volumes:
+            - "./frontend:/usr/src/app"
+        working_dir: "/usr/src/app"
+        container_name: "frontend"
         command: sleep infinity
     db:
         image: postgres:12.1-alpine
-        ports: 
+        ports:
             - "5432:5432"
         hostname: db
         container_name: db
         volumes:
             - postgres_data:/var/lib/postgresql/postgres_data
-        env_file: 
+        env_file:
             - ./env/db.env
 volumes:
     postgres_data:
